<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/city_list_current_selected_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/your_choice_city"
        android:textColor="@color/bold_title" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_text_gray"
        android:text="@string/gps_location"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/city_list_gps_current_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/locating_your_position" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/orange" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_text_gray"
        android:text="@string/country_cities"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <ListView
            android:id="@+id/city_list_lv_provinces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:divider="@null"
            android:listSelector="@color/light_title">
        </ListView>

        <ListView
            android:id="@+id/city_list_lv_cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_title"
            android:choiceMode="singleChoice"
            android:divider="@null" >
        </ListView>
    </LinearLayout>

</LinearLayout>