<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/filter_window_tab1"
            style="@style/FilterWindowTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:text="@string/region" />

        <TextView
            android:id="@+id/filter_window_tab2"
            style="@style/FilterWindowTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skill_level" />

        <TextView
            android:id="@+id/filter_window_tab3"
            style="@style/FilterWindowTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />
    </LinearLayout>

    <ImageView
        android:id="@+id/filter_window_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:src="@drawable/highlight_under_score"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/filter_window_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" >

        <fragment
            android:id="@+id/f1"
            android:name="com.l7dwq.l7playtennis.fragments.LocationFilterFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <fragment
            android:id="@+id/f2"
            android:name="com.l7dwq.l7playtennis.fragments.SkillLevelFilterFragement"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <fragment
            android:id="@+id/f3"
            android:name="com.l7dwq.l7playtennis.fragments.AgeFilterFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.view.ViewPager>

    <com.stanley.uikit.FilterKeywordsPanel
        android:id="@+id/filter_window_keyword_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
    </com.stanley.uikit.FilterKeywordsPanel>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/filter_window_btn_ok"
            style="@style/FilterWindowTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/filter_window_btn_cancel"
            style="@style/FilterWindowTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>