<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/coach_title_bar"
        style="@style/headerTitleBarStyle"
        android:layout_width="match_parent" >

        <ImageButton
            android:id="@+id/coach_detail_btn_back"
            style="@style/HeaderButtonStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_back"
            android:onClick="onBack"
            android:visibility="visible" />

        <TextView
            android:id="@+id/coach_detail_tv_header_title"
            style="@style/HeaderTitleBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/coach_list_tile" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/coach_detail_iv_poster"
            style="@style/DetailPosterStyle"
            android:src="@drawable/poster_placeholder" />

        <TextView
            android:id="@+id/coach_detail_tv_title"
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/coach_detail_iv_poster"
            android:layout_toRightOf="@+id/coach_detail_iv_poster"
            android:text="@string/coach_name_demo" />
        <ImageView
            android:id="@+id/coach_detail_iv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/coach_detail_tv_title"
            android:layout_alignBottom="@id/coach_detail_tv_title"
            android:layout_marginLeft="3dp"
            android:src="@drawable/symbol_male" />
        <TextView
            android:id="@+id/coach_detail_tv_qq"
            style="@style/DetailInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_detail_tv_title"
            android:layout_toRightOf="@+id/coach_detail_iv_poster"
            android:drawableLeft="@drawable/ic_qq"
            android:text="@string/qq_demo" />

        <TextView
            android:id="@+id/coach_detail_tv_tel"
            style="@style/DetailInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_detail_tv_qq"
            android:layout_toRightOf="@+id/coach_detail_iv_poster"
            android:drawableLeft="@drawable/ic_mobile_phone"
            android:text="@string/mobile_phone_demo" />

        <TextView
            android:id="@+id/coach_detail_tv_address"
            style="@style/DetailInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_detail_tv_tel"
            android:layout_toRightOf="@+id/coach_detail_iv_poster"
            android:drawableLeft="@drawable/home"
            android:text="@string/court_address_demo"
            android:textSize="12sp" />
        
        <Button
            android:id="@+id/coach_detail_btn_call" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/coach_detail_tv_qq"
            android:background="@drawable/btn_bg_blue"
            android:text="@string/call_now"/>

        <View
            android:id="@+id/coach_detail_v_line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/coach_detail_tv_address"
            android:layout_margin="10dp"
            android:background="@color/orange" />

        <HorizontalScrollView
            android:id="@+id/coach_detail_hsv_gallary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_detail_v_line1"
            android:layout_marginLeft="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/coach_iv_poster1"
                    style="@style/DetailPosterStyle"
                    android:src="@drawable/poster_placeholder" />

                <ImageView
                    android:id="@+id/coach_iv_poster2"
                    style="@style/DetailPosterStyle"
                    android:src="@drawable/poster_placeholder" />

                <ImageView
                    android:id="@+id/coach_iv_poster3"
                    style="@style/DetailPosterStyle"
                    android:src="@drawable/poster_placeholder" />
            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/coach_detail_v_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/coach_detail_hsv_gallary"
            android:layout_margin="10dp"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/coach_detail_tv_description"
            style="@style/DetailMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coach_detail_v_line2"
            android:lines="10"
            android:singleLine="false"
            android:textSize="15sp"
            android:text="@string/coach_description" />



    </RelativeLayout>

</LinearLayout>